bugfix: bound action creator not wrapped in function

--- a/client/src/components/modals/modal.scss
+++ b/client/src/components/modals/modal.scss
@@ -7,7 +7,7 @@ $font: 'Roboto', 'Helvetica', 'Arial', sans-serif;
   width: 100vw;
   height: 100%;
   position: fixed;
-  z-index: 2;
+  z-index: 3;
   left: 0;
   top: 0;
   background-color: rgb(0, 0, 0);
@@ -24,7 +24,7 @@ $font: 'Roboto', 'Helvetica', 'Arial', sans-serif;
   overflow-y: auto;
 
   &__body {
-    padding: 24px;
+    padding: 0;
     background-color: #272727;
   }
 
@@ -335,6 +335,10 @@ $font: 'Roboto', 'Helvetica', 'Arial', sans-serif;
     &__header {
       font-size: 20px;
       letter-spacing: 0.2rem;
+    }
+
+    &__body {
+      padding: 24px;
     }
 
     &__encryption-method {
